# jolly-personal-assistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: tests.yml
src/jolly/: app.py  config.py
src/jolly/clients/: gcal.py  github.py  jira.py  linear.py
src/jolly/services/: claude_review.py  dashboard.py
src/jolly/static/: app.css  app.js
src/jolly/templates/: index.html
tests/: conftest.py  test_app.py  test_clients_gcal.py  test_clients_github.py  test_clients_jira.py  test_clients_linear.py  test_config.py  test_services_claude_review.py  test_services_dashboard.py
