[project]
name = "jolly"
version = "0.1.0"
description = "Personal assistant dashboard for tickets, PRs, and Claude-powered PR reviews"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "icalendar>=5.0",
    "recurring-ical-events>=3.0",
]

[project.scripts]
jolly = "jolly.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jolly"]
