[project]
name = "jolly"
version = "0.1.0"
description = "Personal assistant dashboard for tickets, PRs, and Claude-powered PR reviews"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "icalendar>=5.0",
    "recurring-ical-events>=3.0",
]

[project.scripts]
jolly = "jolly.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jolly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/jolly"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".venv", "htmlcov"]

[tool.ruff.lint]
select = [
    "F",    # pyflakes — undefined names, unused imports
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort — import order
    "B",    # bugbear — likely bugs
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade — modern syntax
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length is handled by the formatter
    "SIM108", # ternary-instead-of-if isn't always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B011",   # asserts in tests are fine
    "RUF012", # mutable class attributes (test fixtures)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
